Updated 07-rock-paper-scissors file with return function value and store the value in a global variable

--- a/07-function.html
+++ b/07-function.html
@@ -79,6 +79,20 @@
       <br>
       <br>function1();
     </p>
+    <h2>Example on the Rock Paper Scissors game code.</h2>
+    <p>
+      Take a look at the Rock Paper Scissors game code. The codes for button are repeats for the 3 buttons.
+      So this is a perfct situation where we can create a function to reuse the codes.
+      <br> Inside the script tag we will create a fucntion:
+      <br> 1. Let's name the fucntion pickComputerMove: function pickComputerMove() {} one recomandation for the Fucntion name is to use verb/action in the name at first.
+      <br> 2. Now we will move all the codes of computerMove to the new function. Remember we write the function inside the script tag because script run when the page loads so the fuction will crrate first then will be used in codes. 
+      <br> 3. Now set global variable so that it can be accessible from anywhere.
+      <br> 4. Now call the function in the scissors button tag. And thing are working well by using the function.
+      <br> 5. Now resue the codes using the function to the other buttons as well. 
+      <br> 6. Now we will return a value out of a function.
+      <br> 
+      <br>function1();
+    </p>
     <script>
       function function1() {
         console.log("hello");
