--- a/08-objects.html
+++ b/08-objects.html
@@ -34,6 +34,8 @@
         price: 1090,
       };
       console.log(product);
+      // now we can access the object by preperty
+      console.log(product.name);
     </script>
   </body>
 </html>
