--- a/08-objects.html
+++ b/08-objects.html
@@ -54,7 +54,7 @@
       console.log(product);
 
       // Chaech the typeof the object
-      console.log(typeof products);
+      console.log(typeof product);
       */
     </script>
   </body>
