--- a/08-objects.html
+++ b/08-objects.html
@@ -45,7 +45,7 @@
       // Now print the object product in console will show 'cotton socks' instead 'socks'
       console.log(product);
 
-      //Ad new property
+      //Add new property
       product.newProperty = "true";
       console.log(product);
 
@@ -54,7 +54,7 @@
       console.log(product);
 
       // Chaech the typeof the object
-      console.log(typeof products) ;
+      console.log(typeof products);
       */
     </script>
   </body>
