--- a/08-objects.html
+++ b/08-objects.html
@@ -101,7 +101,7 @@
       // So the function inside am object is called method
       product2.fun();
 
-      // call a function inside a object using bracket notation
+      // Call a function inside an object using bracket notation
       product2["fun"]();
     </script>
   </body>
