--- a/08-objects.html
+++ b/08-objects.html
@@ -28,6 +28,18 @@
       Now print the object in console.
     </p>
 
+    <h2>Built-in object:</h2>
+    <p>
+      Like conlosle.log() mathod, console is a built-in object. It is provided
+      by the language.
+      <br />
+      There are 2 moe built-in objects:
+      <br />
+      1. JSON
+      <br />
+      2. LocalStorage
+    </p>
+
     <script>
       /*
       const product = {
