--- a/08-lesson/8d.html
+++ b/08-lesson/8d.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercise 8c</title>
+  <title>Exercise 8d</title>
 </head>
 <body>
   <h1>Lesson 8:</h1>
