Updated dom doc with few examples

--- a/09-dom.html
+++ b/09-dom.html
@@ -28,24 +28,66 @@
 
     <h1>Let's break down the code document.body.innerHTML = 'hello':</h1>
     <p>
-      here document is a built-in object, than a dot notation, means we are accessing a property of the document object called 'body'.
-      now the body is also an object and with dot notation we are accessing a body object called innerHTMl. Than with 
-      the equal sign we are changing the innerHTMl property to the string hello.
-      </body>
+      here document is a built-in object, than a dot notation, means we are
+      accessing a property of the document object called 'body'. now the body is
+      also an object and with dot notation we are accessing a body object called
+      innerHTMl. Than with the equal sign we are changing the innerHTMl property
+      to the string hello.
       <br />
     </p>
 
     <h1>Another Example:</h1>
     <p>
-      Now another example with document. document.title = 'good job'
-      here we are changing the page title property to the string good job.
+      Now another example with document. document.title = 'good job' here we are
+      changing the page title property to the string good job.
+      <br />
+      <br />
+      The document object represents the models of the webpage. And called the
+      feature Document Object Model or DOM. DOM combine html and javascript
+      together. And JS controlls the webpage.
+    </p>
+
+    <h1>
+      document.querySelector() method: a method is a fucntion that saved in an
+      object.
+    </h1>
+    <p>
+      document.querySelector() lets us get any element from the page and put in
+      inside Javascrip.
+      <br />
     </p>
 
     <button>hello</button>
 
     <script>
+      /*
+      // Print page title using DOM title property in console.
+      console.log(document.title);
+
+      // Docuemnt.body: it copy the body of html and put into the script
+      document.body;
+      // Now print in consloe and see what we see  in console
+      console.log(document.body);
+
+      // When we do the above then html body converts to a JS object.
+      // For an example, if we print typeof it retunrs object in console.
+      console.log(typeof document.body);
+
+      // Use innterHTML property and print in console: and it shows all the codes in body
+      console.log(document.body.innerHTML);
+
+      // Now we can change the innerHTML And we can check this on element tab in devtools.
+      document.body.innerHTML = "Changed";
+
+      // We can also create new html inside the script using DOM innerHTML.
+      // This new button html code we replace all inner html codes.
+      document.body.innerHTML = "<button>Good Job</button>";
+      */
+
+      /*
       document.body.innerHTML = "hello";
-      document.title = 'good job'
+      document.title = "good job";
+      */
     </script>
   </body>
 </html>
